src/objects/ACED_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <description>User can enter description of this activity</description>
        <inlineHelpText>Short description, in English, about this Activity</inlineHelpText>
        <label>Activity Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <inlineHelpText>Enter a name that would be recognizable by Cross-Functional Team members. (ex. &quot;Dr. Barkley&apos;s Webcast: ADHD in Adults&quot;,  &quot;Cymbalta MDD Newsletter 1&quot;)</inlineHelpText>
        <label>Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Costs__c</fullName>
        <inlineHelpText>This is a helptext for Actual Costs</inlineHelpText>
        <label>Actual Costs</label>
        <summarizedField>ACED_Cost__c.Cost__c</summarizedField>
        <summaryForeignKey>ACED_Cost__c.Assets_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Weighted_eInt__c</fullName>
        <formula>Actual_eInt__c * Channel__r.Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Weighted eInt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_eInt__c</fullName>
        <inlineHelpText>This is a helptext for eInteractions</inlineHelpText>
        <label>Actual eInt</label>
        <summarizedField>ACED_Deliveries__c.Actual_Value__c</summarizedField>
        <summaryForeignKey>ACED_Deliveries__c.Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_vs_EsteInt__c</fullName>
        <formula>IF(Estimated_eInt__c  &gt; 0, Actual_eInt__c  /  Estimated_eInt__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual vs Estim eInt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <formula>TEXT(Program__r.Affiliate__c)</formula>
        <inlineHelpText>This is a helptext for Affiliate</inlineHelpText>
        <label>Affiliate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assets__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Asset that this activity is using; the asset should be available in the asset portfolio. Leave it blank if the activity does not make use of an asset</inlineHelpText>
        <label>Asset</label>
        <referenceTo>ACED_Asset__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Assests_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Channel this activity is using to distribute the content.</inlineHelpText>
        <label>Channel</label>
        <referenceTo>ACED_Channel__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Assests_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Deliveries__c</fullName>
        <inlineHelpText>This is a helptext for # Completed/Started Deliveries</inlineHelpText>
        <label># Completed/Started Deliveries</label>
        <summaryFilterItems>
            <field>ACED_Deliveries__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed, Started</value>
        </summaryFilterItems>
        <summaryForeignKey>ACED_Deliveries__c.Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cost_Per_eInt__c</fullName>
        <formula>IF( Actual_eInt__c &gt; 0,  Actual_Costs__c /Actual_eInt__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per eInt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliveries__c</fullName>
        <inlineHelpText>This is a helptext for # Deliveries</inlineHelpText>
        <label># Deliveries</label>
        <summaryForeignKey>ACED_Deliveries__c.Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deliveries_with_Cust_Satisfaction__c</fullName>
        <inlineHelpText>Read-only. # of Deliveries in the activity where the Customer Satisfaction has bewen measured</inlineHelpText>
        <label>Deliveries with Cust. Satisfaction</label>
        <summaryFilterItems>
            <field>ACED_Deliveries__c.CustSat__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>ACED_Deliveries__c.Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Weighted_eInt__c</fullName>
        <formula>Estimated_eInt__c * Channel__r.Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Weighted eInt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_eInt__c</fullName>
        <inlineHelpText>This is a helptext for Estimated eInt</inlineHelpText>
        <label>Estimated eInt</label>
        <summarizedField>ACED_Deliveries__c.Estimated_eInt__c</summarizedField>
        <summaryForeignKey>ACED_Deliveries__c.Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Indication_Details__c</fullName>
        <description>This field displayed Indication details to filter by in List views</description>
        <formula>Program__r.Indication_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indication Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPO_Metrics_Completed__c</fullName>
        <label># KPO Metrics Completed</label>
        <summaryFilterItems>
            <field>ACED_KPO_Metric__c.Normalized_Value__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ACED_KPO_Metric__c.Asset_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KPO_Metrics__c</fullName>
        <inlineHelpText>This is a helptext for # KPO Metrics</inlineHelpText>
        <label># KPO Metrics</label>
        <summaryForeignKey>ACED_KPO_Metric__c.Asset_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KPO_Result__c</fullName>
        <inlineHelpText>Read-only. Average of the Normalized Value of the KPO metrics defined for this activity that have been meassured</inlineHelpText>
        <label>KPO Result</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Activity__c</fullName>
        <formula>Program__r.My_Programs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Cost__c</fullName>
        <inlineHelpText>Budget reserved to run the activity</inlineHelpText>
        <label>Planned Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <inlineHelpText>Date when the activity is planned to finalize. In the case on an email consider 15 days after being sent, for a website could be several months after being launched…)</inlineHelpText>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <inlineHelpText>Date when the activity has to be executed. Leave it blank if the activity is included after the brand plan was created and agreed; in that case the activity is considered as Not Planned</inlineHelpText>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Weighted_eInt__c</fullName>
        <formula>Planned_eInt__c *  Channel__r.Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Weighted eInt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_eInt__c</fullName>
        <inlineHelpText>This is a helptext for Planned eInt</inlineHelpText>
        <label>Planned eInt</label>
        <summarizedField>ACED_Deliveries__c.Planned_eInt__c</summarizedField>
        <summaryForeignKey>ACED_Deliveries__c.Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>Choose from the list of programs in the lookup table the one this activity belongs to</inlineHelpText>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$User.ACED_HUB__c</field>
                <operation>equals</operation>
                <valueField>ACED_Programs__c.HUB__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.ACED_HUB__c</field>
                <operation>equals</operation>
                <value>ACE HUB</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACED_Programs__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Assests_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Planned_eInt_Q1__c</fullName>
        <formula>IF(TEXT(Planned_Start_Date__c)!=null &amp;&amp; TEXT(Planned_End_Date__c)!=null,
(IF(MONTH(Planned_Start_Date__c)&lt;=3,if(MONTH(Planned_End_Date__c)&gt;=3,4-MONTH(Planned_Start_Date__c),MONTH(Planned_End_Date__c)-MONTH(Planned_Start_Date__c)+1),0))/(MONTH(Planned_End_Date__c) - MONTH(Planned_Start_Date__c) +1),0)</formula>
        <inlineHelpText>This is a helptext for Rate Planned eInt Q1</inlineHelpText>
        <label>Rate Planned eInt Q1</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Planned_eInt_Q2__c</fullName>
        <formula>if(TEXT(Planned_Start_Date__c)!=null &amp;&amp; TEXT(Planned_End_Date__c)!=null,(IF(MONTH(Planned_Start_Date__c)&lt;=6 &amp;&amp; MONTH(Planned_End_Date__c)&gt;=3,if(MONTH(Planned_End_Date__c)&gt;=6,7-
IF(MONTH(Planned_Start_Date__c)&lt;4 ,4,MONTH(Planned_Start_Date__c))
,MONTH(Planned_End_Date__c)-IF(MONTH(Planned_Start_Date__c)&lt;4 ,4,MONTH(Planned_Start_Date__c))+1),0))/(MONTH(Planned_End_Date__c) - MONTH(Planned_Start_Date__c) +1),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for Rate Planned eInt Q2</inlineHelpText>
        <label>Rate Planned eInt Q2</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Planned_eInt_Q3__c</fullName>
        <formula>if(TEXT(Planned_Start_Date__c)!=null &amp;&amp; TEXT(Planned_End_Date__c)!=null,(IF(MONTH(Planned_Start_Date__c)&lt;=9 &amp;&amp; MONTH(Planned_End_Date__c)&gt;=6,if(MONTH(Planned_End_Date__c)&gt;=9,10-
IF(MONTH(Planned_Start_Date__c)&lt;7 ,7,MONTH(Planned_Start_Date__c))
,MONTH(Planned_End_Date__c)-IF(MONTH(Planned_Start_Date__c)&lt;7 ,7,MONTH(Planned_Start_Date__c))+1),0))/(MONTH(Planned_End_Date__c) - MONTH(Planned_Start_Date__c) +1),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for Rate Planned eInt Q3</inlineHelpText>
        <label>Rate Planned eInt Q3</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StandAlone_Asset_Upsert__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is a helptext for StandAlone Asset Upsert</inlineHelpText>
        <label>StandAlone Asset Upsert</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Asset status calculated from status of associated deliveries</description>
        <inlineHelpText>Indicates whether any of the deliveries of this activity have started (value is Executed) or not (value remain as Not Executed)</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Executed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unplanned_Activities__c</fullName>
        <formula>IF( ISBLANK( Planned_Start_Date__c ) , 1, 0)</formula>
        <label># Unplanned Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unplanned_Executed_Activities__c</fullName>
        <formula>IF( AND((ISPICKVAL( Status__c , &quot;Executed&quot;)),(  ISBLANK(Planned_Start_Date__c) )) , 1, 0)</formula>
        <label># Unplanned Executed Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eInt_Cost__c</fullName>
        <inlineHelpText>Read-only. Cost per Interaction obtained for this activity. It divides the Actual cost of the activity by the # of actual eInteractions</inlineHelpText>
        <label>eInt Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_Executed_Activities__c</fullName>
        <formula>IF(ISPICKVAL( Status__c , &quot;Executed&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Executed Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Planned_Activities__c</fullName>
        <formula>IF( ISBLANK( Planned_Start_Date__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Planned Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>All_Activitiy</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Program__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Channel__c</columns>
        <columns>Assets__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Activity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Activity</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brand</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Status__c</columns>
        <columns>Actual_Costs__c</columns>
        <columns>Actual_eInt__c</columns>
        <columns>Assets__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Activity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>contains</operation>
        </filters>
        <label>2. Brand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brand_Indication</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Status__c</columns>
        <columns>Actual_Costs__c</columns>
        <columns>Actual_eInt__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Assets__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Activity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>contains</operation>
        </filters>
        <label>3. Brand Indication</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Business_Function</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Program__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Channel__c</columns>
        <columns>Assets__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Activity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>contains</operation>
        </filters>
        <label>4. Business Function</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Business_Unit</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Status__c</columns>
        <columns>Actual_Costs__c</columns>
        <columns>Actual_eInt__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Assets__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Activity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>contains</operation>
        </filters>
        <label>5. Business Unit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_HUB_Activitiy</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Activity_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Program__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Channel__c</columns>
        <columns>Assets__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Activity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1. My HUB Activity</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Therapeutic_Area</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Status__c</columns>
        <columns>Assets__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Channel__c</columns>
        <columns>Actual_Costs__c</columns>
        <columns>Actual_eInt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Activity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>contains</operation>
        </filters>
        <label>6. Therapeutic Area</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACED_Program_Should_have_Indications</fullName>
        <active>true</active>
        <description>US-36161. This ensures that all Programs have been set up correctly with Brand Indications before they can be associated to Activities.
Anil -  added condition of standalone program since they never will have brand indications</description>
        <errorConditionFormula>Program__r.Brand_Indications__c =0&amp;&amp; ISNEW() &amp;&amp;  NOT(Program__r.StandAlone_Asset_Program_TF__c)</errorConditionFormula>
        <errorDisplayField>Program__c</errorDisplayField>
        <errorMessage>Program should have atleast one Brand Indication associated before they can be associated to Activity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Channel_Selection</fullName>
        <active>true</active>
        <description>Prompts user to select Channel in case of no asset being selected or the asset selected has no channel on it.</description>
        <errorConditionFormula>AND( Assets__c=&apos;&apos;,Channel__c=&apos;&apos; )</errorConditionFormula>
        <errorDisplayField>Channel__c</errorDisplayField>
        <errorMessage>Please select a Channel</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDateNotLessStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>(Planned_End_Date__c - Planned_Start_Date__c)&lt;0</errorConditionFormula>
        <errorDisplayField>Planned_End_Date__c</errorDisplayField>
        <errorMessage>End date cannot be lesser than start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateAndEndOfProgram</fullName>
        <active>false</active>
        <errorConditionFormula>(YEAR(Planned_End_Date__c) != YEAR(Planned_Start_Date__c)) || ((TEXT(Program__r.Year__c) != TEXT(YEAR(Planned_Start_Date__c))))</errorConditionFormula>
        <errorDisplayField>Planned_End_Date__c</errorDisplayField>
        <errorMessage>Start and end dates should match the program year</errorMessage>
    </validationRules>
</CustomObject>